kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-getrestaurants
spec:
  selector:
    app: express-getrestaurants
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 5000
